tth-sdo/main/default/objects/Account/fields/Open_vs_Closed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_vs_Closed_Opportunities__c</fullName>
    <formula>IMAGE(&#39;http://chart.apis.google.com/chart?cht=p3&amp;chs=300x100&amp;chd=t:&#39;+ 
TEXT( Open_Opptys__c ) + &#39;,&#39; + TEXT(Closed_Lost_Opptys__c + Closed_Won_Opptys__c) + 
&#39;&amp;chl=Open (&#39; + TEXT(Open_Opptys__c)+&#39;)|Closed (&#39;+TEXT( Closed_Lost_Opptys__c + Closed_Won_Opptys__c )+&#39;)&amp;chf=bg,s,FFFFFF&#39; 







, &#39;no data available&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open vs. Closed Opportunities</label>
    <type>Text</type>
</CustomField>