tth-sdo/main/default/objects/Account/fields/Open_vs_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_vs_Closed_Won_Opportunities__c</fullName>
    <formula>IMAGE(&#39;http://chart.apis.google.com/chart?chxt=x,y&amp;chxl=1:|Open|Closed Won|0:|0|50000|&#39;+ TEXT(1.5 * MAX( Closed_Won_Value__c , Open_Oppty_Value__c )) +&#39;&amp;cht=bhs&amp;chd=t:&#39;+TEXT( Open_Oppty_Value__c )+&#39;,&#39;+TEXT( Closed_Won_Value__c )+&#39;&amp;chds=0,&#39;+ TEXT(1.5 * MAX( Closed_Won_Value__c , Open_Oppty_Value__c )) +&#39;&amp;chco=236FBD&amp;chls=2.0&amp;chs=300x125&amp;chtt=Opportunity Value ($USD)&#39; 


, &#39;no data available&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open vs. Closed Won Opportunities</label>
    <type>Text</type>
</CustomField>