tth-sdo/main/default/objects/Account/fields/Rating_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Rating_Indicator__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Value__c &gt; 0, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Value__c &gt; 1, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Value__c &gt; 2, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Value__c &gt; 3, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;&amp; IF (Value__c &gt; 4, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Indicator</label>
    <type>Text</type>
</CustomField>