tth-sdo/main/default/objects/Account/fields/Win_Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Ratio__c</fullName>
    <formula>IMAGE(&#39;http://chart.apis.google.com/chart?cht=p3&amp;chs=300x100&amp;chd=t:&#39;+ 
TEXT( Percent_Won__c ) + &#39;,&#39; + TEXT(1 - Percent_Won__c) + 
&#39;&amp;chco=236FBD&amp;chl=Won (&#39;+TEXT( ROUND(Percent_Won__c * 100, 0) )+&#39;%)|Lost (&#39;+TEXT(ROUND((1- Percent_Won__c) * 100, 0) )+&#39;%)&amp;chf=bg,s,FFFFFF&#39; 






, &#39;no data available&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Loss Ratio</label>
    <type>Text</type>
</CustomField>