tth-sdo/main/default/objects/Account/recordTypes/Simple.recordType-meta.xml
<RecordType>
    <fullName>Simple</fullName>
    <active>true</active>
    <description>Primary Account record type used for most account records.</description>
    <label>Account</label>
  
</RecordType>