tth-sdo/main/default/objects/Account/listViews/PartnerAccounts.listView-meta.xml
<ListView>
    <fullName>PartnerAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Partner_Program_Level__c</columns>
    <columns>Partner_Certification__c</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Partner</value>
    </filters>
    <label>All Partner Accounts</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
        <group>Channel_Managers</group>
    </sharedTo>
</ListView>